deploy-kube/build-image.yml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-build-thebidouilleur
  labels: 
    version: 2
  annotations:
    argocd.argoproj.io/hook: PreSync 
spec:
  containers:
  - name: kaniko-demo
    image: gcr.io/kaniko-project/executor:latest
    args: ["--context=git://git.thoughtless.eu/Cinabre/TheBidouilleur-kubernetes",
            "--destination=registry.thebidouilleur.xyz/thebidouilleur:latest",
            "--dockerfile=Dockerfile"]
    volumeMounts:
      - name: kaniko-secret
        mountPath: /kaniko/.docker
  restartPolicy: Never
  volumes:
    - name: kaniko-secret
      secret:
        secretName: regcred
        items:
          - key: .dockerconfigjson
            path: config.json
